--- a/FE/src/app/routes/blog/blog.component.html
+++ b/FE/src/app/routes/blog/blog.component.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/blog-cake.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
@@ -44,7 +44,7 @@
 
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/postImg2.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
@@ -65,7 +65,7 @@
 
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/postitem1.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
@@ -86,7 +86,7 @@
 
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/tabimg.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
@@ -107,7 +107,7 @@
 
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/postitem.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
@@ -128,7 +128,7 @@
 
         <div class="col-md-4 mb-5">
           <a href="single-post.html">
-            <img src="images/postimg2.jpg" alt="blog" class="postImg mb-3">
+            <img src="./assets/product/empty.jpg" alt="blog" class="postImg mb-3">
           </a>
           <div class="content">
             <div class="meta-tags flex-container color-secondary mb-3">
