--- a/FE/src/app/routes/home/home.component.html
+++ b/FE/src/app/routes/home/home.component.html
@@ -3,3 +3,4 @@
 <app-image-product></app-image-product>
 <app-cart></app-cart>
 <app-testimonials></app-testimonials>
+<nz-back-top nzDuration="100"></nz-back-top>
