--- a/FE/src/styles.less
+++ b/FE/src/styles.less
@@ -51,6 +51,9 @@ This is main CSS file that contains custom style rules used in this template
 /*--------------------------------------------------------------
 /** 1. Normalize
 --------------------------------------------------------------*/
+*{
+  font-family: "Times New Roman";
+}
 html, body {
   position: relative;
   width: 100%;
@@ -58,7 +61,6 @@ html, body {
 }
 html {
   font-size: 100%;
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -6451,6 +6453,9 @@ a.nav-link {
 .nav.nav-tabs .nav-link.active {
   color: #ce3c83;
 }
+.color-main{
+  color: #CE3C83 !important;
+}
 
 /* -- Best Products Section
 --------------------------------------------------------------*/
@@ -6645,7 +6650,7 @@ a.magnific-popup:hover .overlay {
 --------------------------------------------------------------*/
 .site-banner{
   //background: url(assets/product/banner.jpg) no-repeat;
-  height: 267px;
+  height: 185px;
 }
 .site-banner .banner-content {
   display: flex;
