thêm chức năng giỏ hàng

--- a/FE/src/app/routes/blog/blog.component.html
+++ b/FE/src/app/routes/blog/blog.component.html
@@ -116,7 +116,7 @@
               <span><i class="icon icon-envelope-o mr-2"></i>News</span>
             </div><!--meta-tags-->
 
-            <h2 class="post-title"><a href="single-post.html">How to Make a Cake with Great Delicious Chocolate</a></h2>
+            <h2 class="post-title"><a href="single-post.html">Chia seeds are a super food concentrated with omega-3 fatty acid, carbs, protein, fiber and antioxidants.</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eisusmod tempor incidunt ut elit et.</p>
 
             <div class="pix_btn">
@@ -137,7 +137,7 @@
               <span><i class="icon icon-envelope-o mr-2"></i>News</span>
             </div><!--meta-tags-->
 
-            <h2 class="post-title"><a href="single-post.html">How to Make a Cake with Delicious Chocolate</a></h2>
+            <h2 class="post-title"><a href="single-post.html">Chia seeds are a super food concentrated with omega-3 fatty acid, carbs, protein, fiber and antioxidants</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eisusmod tempor incidunt ut elit et.</p>
 
             <div class="pix_btn">
