--- a/FE/src/app/routes/cart/cart.component.html
+++ b/FE/src/app/routes/cart/cart.component.html
@@ -8,7 +8,8 @@
   <ng-container *nzDrawerContent>
     <div *ngIf="(listProductCarts.length === 0 )" class="d-flex align-items-center flex-column">
       <img src="../../../assets/product/empty_cart.png">
-      <button (click)="closeDrawer()" routerLink="/" nzSize="large" nzShape="round" nz-button nzDanger>Keep buying</button>
+      <button (click)="closeDrawer()" routerLink="/" nzSize="large" nzShape="round" nz-button nzDanger>Keep buying
+      </button>
     </div>
     <div *ngIf="(listProductCarts.length !== 0 )">
       <div class="position-absolute w-91 top-79">
@@ -17,25 +18,34 @@
           <label class="text-black fw-2 fs-4">Tổng tiền:</label>
           <label class="color-main text-black fw-2 fs-4">{{total + unit}}</label>
         </div>
-        <button class="w-100" style="background-color: #CE3C83" nzSize="large" nzType="primary" nz-button nzShape="round">Thanh toán</button>
+        <button (click)="test()" class="w-100" style="background-color: #CE3C83" nzSize="large" nzType="primary"
+                nz-button nzShape="round">Thanh toán
+        </button>
       </div>
-      <nz-table nzShowPagination="false"  #basicTable [nzData]="listProductCarts">
+      <nz-table nzShowPagination="false" #basicTable [nzData]="listProductCarts">
         <thead>
         </thead>
         <tbody>
         <tr *ngFor="let data of listProductCarts; index as i">
-          <td style="width: 10%">{{i+1}}</td>
+          <td
+            [nzChecked]="setOfCheckedId.has(data.id)"
+            [nzDisabled]="data.disabled"
+            (nzCheckedChange)="onItemChecked(data.id, $event)"
+          ></td>
           <td class="fw-bold" style="width: auto">
             <div>
               <label class="fw-bold color-primary">{{data.name}}</label>
               <div class="d-flex justify-content-lg-between">
-                <nz-input-number  [nzMin]="1" [nzMax]="10" [nzStep]="1"></nz-input-number>
-                <label class="color-main">1VNĐ</label>
+                <div class="d-inline-flex">
+                  <label>Số lượng: </label>
+                  <nz-input-number (ngModelChange)="changeQuantiny($event, data)" [ngModel]="data.quantity" class="ml-2" nzSize="small" [nzMin]="1" [nzMax]="10" [nzStep]="1"></nz-input-number>
+                </div>
+                <label class="color-main">{{data.price + unit}}</label>
               </div>
             </div>
           </td>
           <td style="width: 10%" (click)="removeFromCart(i)">
-            <span nz-icon nzType="delete" class="fs-4" nzTheme="outline"></span>
+            <span class="fs-5" nz-icon nzType="close" nzTheme="outline"></span>
           </td>
         </tr>
         </tbody>
