--- a/FE/src/app/routes/detail-product/detail-product.component.html
+++ b/FE/src/app/routes/detail-product/detail-product.component.html
@@ -11,7 +11,7 @@
         <div class="col-md-6 pl-5">
           <div class="product-detail">
             <h5 class="pt-4"><a>{{detailProduct.name}}</a></h5>
-            <span class="price colored">{{detailProduct.price}}</span>
+            <span class="price colored">{{detailProduct.price + unit}}</span>
 
             <p>
               {{detailProduct.description}}
