--- a/FE/src/app/routes/about-us/about-us.component.html
+++ b/FE/src/app/routes/about-us/about-us.component.html
@@ -87,3 +87,6 @@
 <!--  </div>-->
 
 <!--</section>-->
+<!--<agm-map [latitude]="lat" [longitude]="lng">-->
+<!--  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
+<!--</agm-map>-->
