--- a/FE/src/app/routes/all-product/all-product.component.html
+++ b/FE/src/app/routes/all-product/all-product.component.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div *ngFor="let item of listProducts" class="product-item col-md-3 pb-4">
-          <a (click)="getDetailProduct(item.id)" class="product-image"><img [src]='getImage(item.listImg[3])'></a>
+          <a (click)="getDetailProduct(item.id)" class="product-image"><img [src]='getImage(item.thumbnailImage)'></a>
           <div class="text-comtent text-center">
             <h5 class="pt-4"><a (click)="getDetailProduct(item.id)">{{item.name}}</a></h5>
             <span class="price colored">{{item.price}}VNĐ</span>
