--- a/FE/src/app/routes/detail-product/detail-product.component.html
+++ b/FE/src/app/routes/detail-product/detail-product.component.html
@@ -5,7 +5,7 @@
       <div class="row">
 
         <div class="col-md-6">
-          <a class="product-image"><img [src]="detailProduct.filePath ? (urlImage + detailProduct.filePath) : (emptyImage)"></a>
+          <a class="product-image"><img [src]="getImage(detailProduct.listImg)"></a>
         </div>
 
         <div class="col-md-6 pl-5">
