--- a/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Product/Index.cshtml
@@ -44,12 +44,12 @@
     <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script>
-        var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build(); // Replace with the appropriate hub URL
+        var connection = new signalR.HubConnectionBuilder().withUrl("/productHub").build(); // Replace with the appropriate hub URL
 
-        connection.on("ReceiveMessage", function (product) {
+        connection.on("SendMessage", function (product, i) {
             // Update the product list in the Index view with the new product information
             // You can use JavaScript/jQuery to update the DOM dynamically
-            console.log(product);
+            console.log(product,i);
         });
 
         connection.start().then(function () {
